--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <li><a href="#home" class="active">Home</a></li>
             <li><a href="#about-me">About Me</a></li>
             <li><a href="#section-skills">Skills</a></li>
+            <li><a href="#Projects">Projects</a></li>
             <li><a href="#Contact">Contact</a></li>
         </ul>
     </nav>
@@ -129,6 +130,118 @@
             </div>
         </div>
     </section>
+    <!-- My Works Start -->
+    <section id="my-works">
+        <div class="container">
+            <div class="container-header">
+                <h2 class="container-header-title">MY
+                    <span>WORKS</span>
+                </h2>
+                <span class="container-header-number">05</span>
+            </div>
+            <div class="my-works-content">
+                <div class="my-works-content-item">
+                    <div class="my-works-content-item-overlay">
+                        <!-- <div class=""> -->
+                        <a class="my-works-content-item-overlay-eye-icon"
+                        target="_blank"
+                            href="https://motaheresa.github.io/medical-react-project/"><i class='bx bx-low-vision'></i>
+                        </a>
+                        <!-- </div> -->
+                        <a
+                        href="https://github.com/motaheresa/medical-react-project"
+                        target="_blank" class="my-works-content-item-overlay-link-icon">
+                            <i class='bx bx-link' ></i>
+                        </a>
+                    </div>
+                    <img src="/utils/projects imgs/Screenshot (357).png" alt="">
+                </div>
+                <div class="my-works-content-item">
+                    <div class="my-works-content-item-overlay">
+                        <!-- <div class=""> -->
+                        <a class="my-works-content-item-overlay-eye-icon"
+                        target="_blank"
+                            href="https://mohamed-waleed10.github.io/Final-Project-Of-NTI/"><i class='bx bx-low-vision'></i>
+                        </a>
+                        <!-- </div> -->
+                        <a
+                        href="https://mohamed-waleed10.github.io/Final-Project-Of-NTI/"
+                        target="_blank" class="my-works-content-item-overlay-link-icon">
+                            <i class='bx bx-link' ></i>
+                        </a>
+                    </div>
+                    <img src="images/Screenshot 2025-01-03 144254.png" alt="">
+                </div>
+                <div class="my-works-content-item">
+                    <div class="my-works-content-item-overlay">
+                        <!-- <div class=""> -->
+                        <a class="my-works-content-item-overlay-eye-icon"
+                        target="_blank"
+                            href="https://motaheresa.github.io/Proffesional-Educational-Project-/"><i class='bx bx-low-vision'></i>
+                        </a>
+                        <!-- </div> -->
+                        <a
+                        href="https://github.com/motaheresa/Proffesional-Educational-Project-"
+                        target="_blank" class="my-works-content-item-overlay-link-icon">
+                            <i class='bx bx-link' ></i>
+                        </a>
+                    </div>
+                    <img src="/utils/projects imgs/Screenshot (363).png" alt="">
+                </div>
+                <div class="my-works-content-item">
+                    <div class="my-works-content-item-overlay">
+                        <!-- <div class=""> -->
+                        <a class="my-works-content-item-overlay-eye-icon"
+                        target="_blank"
+                            href="https://motaheresa.github.io/template1/"><i class='bx bx-low-vision'></i>
+                        </a>
+                        <!-- </div> -->
+                        <a
+                        href="https://github.com/motaheresa/template1"
+                        target="_blank" class="my-works-content-item-overlay-link-icon">
+                            <i class='bx bx-link' ></i>
+                        </a>
+                    </div>
+                    <img src="/utils/projects imgs/Webo.OracleProfile-removebg-preview.png" alt="">
+                </div>
+
+
+                
+                <div class="my-works-content-item">
+                    <div class="my-works-content-item-overlay">
+                        <!-- <div class=""> -->
+                        <a class="my-works-content-item-overlay-eye-icon"
+                        target="_blank"
+                            href="https://motaheresa.github.io/template.HTML-CSS/"><i class='bx bx-low-vision'></i>
+                        </a>
+                        <!-- </div> -->
+                        <a
+                        href="https://github.com/motaheresa/template.HTML-CSS"
+                        target="_blank" class="my-works-content-item-overlay-link-icon">
+                            <i class='bx bx-link' ></i>
+                        </a>
+                    </div>
+                    <img src="/utils/projects imgs/Screenshot (364).png" alt="">
+                </div>
+
+
+                <div class="my-works-content-item">
+                    <div class="my-works-content-item-overlay">
+                        <!-- <div class=""> -->
+
+                        <!-- </div> -->
+                        <a
+                        href="https://github.com/motaheresa/Company-Managment-System"
+                        target="_blank" class="my-works-content-item-overlay-link-icon">
+                            <i class='bx bx-link' ></i>
+                        </a>
+                    </div>
+                    <img src="/utils/projects imgs/company2.jpg" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- My Works end -->
     <!-- end skills  -->
     <!-- start contact  -->
     <h3 class="contact">Contact <span>Me</span></h3>
