--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 around me. You'll always find me a "Yes,I can do it" guy who is open to new initiatives and willing to
                                 take risks
                             </p>
-                            <a href="images/MOHAMED WALEED AMIN ....cv.pdf" class="btn">Download CV</a>
+                            <a href="images/Mohamed-Waleed-Amin-CV.pdf" class="btn">Download CV</a>
                             <div class="social">
                                 <a href="https://www.facebook.com/mahmmed.waled?mibextid=ZbWKwL"><i class='bx bxl-facebook'></i></a>
                                 <a href=""><i class='bx bxl-instagram' ></i></a>
